syntax = "proto3";

package version;

// VersionResponse 版本信息
message VersionResponse {
    // 编译版本
    string golang   = 1;
    // 占用的核心数
    int32 cpus      = 2;
    // 当前协程数
    int32 routines  = 3;
    // 应用名称
    string name     = 4;
    // version 为{branch}.{buildId}
    string version  = 5;
}